# cabin

./: .gitignore  README.md
client/: bun.lockb  cypress.config.ts  index.html  package.json  tailwind.config.js  vite.config.ts
client/cypress/e2e/: auth.cy.ts
client/src/: ErrorPage.tsx  Login.tsx  Register.tsx  Writer.tsx  main.tsx
client/src/components/: ResizeableTextarea.tsx
client/src/components/MaterialInput/: MaterialInput.tsx
client/src/components/skeletons/: EntryLoading.tsx  ListLoading.tsx
client/src/icons/: CloseIcon.tsx  ListIcon.tsx  PlusIcon.tsx  SaveIcon.tsx
client/src/styles/: editor-styles.scss  main.scss  theme.scss
client/src/utils/: errors.ts  network.ts
scripts/: build.sh  test-e2e.sh
server/: Cargo.toml
server/public/: index.html
server/scripts/: db_setup.sh  schema.sql  seed.sql  test.sh
server/src/: entries.rs  errors.rs  lib.rs  main.rs  users.rs
server/tests/: integration_tests.rs
